EB Test Install 2 - Shaun

--- a/config/database.yml
+++ b/config/database.yml
@@ -50,7 +50,7 @@ test:
 production:
   <<: *default
   database: <%= ENV['RDS_DB_NAME'] %>
-  username: <%= ENV['RDS_USERNAME'] %>
-  password: <%= ENV['RDS_PASSWORD'] %>
+  username: ebroot #<%= ENV['RDS_USERNAME'] %>
+  password: password #<%= ENV['RDS_PASSWORD'] %>
   host: <%= ENV['RDS_HOSTNAME'] %>
   port: <%= ENV['RDS_PORT'] %>
