EB Test Install 5 - Shaun

--- a/.elasticbeanstalk/config
+++ b/.elasticbeanstalk/config
@@ -1,6 +1,5 @@
 [global]
 ApplicationName=TicketSystem3
-ApplicationVersionName=git-d5570c8ec53e08672f377386f6bca4fd58cb3184-1414390983414
 AwsCredentialFile=C:\Users\Shaun\.elasticbeanstalk\aws_credential_file
 DevToolsEndpoint=git.elasticbeanstalk.us-west-1.amazonaws.com
 EnvironmentName=TicketSystem3-env
@@ -13,5 +12,5 @@ RdsEnabled=Yes
 RdsSourceSnapshotName=
 Region=us-west-1
 ServiceEndpoint=https://elasticbeanstalk.us-west-1.amazonaws.com
-SolutionStack=64bit Amazon Linux 2014.03 v1.0.9 running Ruby 1.9.3
+SolutionStack=64bit Amazon Linux 2014.03 v1.0.9 running Ruby 2.0 (Puma)
 
