--- a/config/database.yml
+++ b/config/database.yml
@@ -53,4 +53,5 @@ production:
   username: ebroot #<%= ENV['RDS_USERNAME'] %>
   password: password #<%= ENV['RDS_PASSWORD'] %>
   host: aau2r385jhjw5q.c7uotqbqapu4.us-west-1.rds.amazonaws.com #<%= ENV['RDS_HOSTNAME'] %>
-  port: 3306 #<%= ENV['RDS_PORT'] %>
+  port: 3306
+   #<%= ENV['RDS_PORT'] %>
