--- a/config/database.yml
+++ b/config/database.yml
@@ -9,24 +9,24 @@
 # And be sure to use new-style password hashing:
 #   http://dev.mysql.com/doc/refman/5.0/en/old-client.html
 #
-default: &default
-  adapter: mysql2
-  encoding: utf8
-  pool: 5
-  username: root
-  password:
-  host: localhost
+#default: &default
+#  adapter: mysql2
+#  encoding: utf8
+#  pool: 5
+#  username: root
+#  password:
+#  host: localhost
 
-development:
-  <<: *default
-  database: CT_development
+#development:
+#  <<: *default
+#  database: CT_development
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
-test:
-  <<: *default
-  database: CT_test
+#test:
+#  <<: *default
+#  database: CT_test
 
 # As with config/secrets.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -47,11 +47,47 @@ test:
 #   production:
 #     url: <%= ENV['DATABASE_URL'] %>
 #
-production:
-  <<: *default
-  database: ebdb #<%= ENV['RDS_DB_NAME'] %>
-  username: ebroot #<%= ENV['RDS_USERNAME'] %>
-  password: password #<%= ENV['RDS_PASSWORD'] %>
-  host: aau2r385jhjw5q.c7uotqbqapu4.us-west-1.rds.amazonaws.com #<%= ENV['RDS_HOSTNAME'] %>
+#production:
+#  <<: *default
+#  database: ebdb #<%= ENV['RDS_DB_NAME'] %>
+#  username: ebroot #<%= ENV['RDS_USERNAME'] %>
+#  password: password #<%= ENV['RDS_PASSWORD'] %>
+#  host: aau2r385jhjw5q.c7uotqbqapu4.us-west-1.rds.amazonaws.com #<%= ENV['RDS_HOSTNAME'] %>
+#  port: 3306
+#   #<%= ENV['RDS_PORT'] %>
+
+development:
+  adapter: mysql2
+  encoding: utf8
+  reconnect: false
+  database: ebdb
+  pool: 5
+  username: ebroot
+  password: password
+  host: localhost
   port: 3306
-   #<%= ENV['RDS_PORT'] %>
+
+# Warning: The database defined as "test" will be erased and
+# re-generated from your development database when you run "rake".
+# Do not set this db to the same as development or production.
+test:
+  adapter: mysql2
+  encoding: utf8
+  reconnect: false
+  database: mysql_test
+  pool: 5
+  username: ebroot
+  password: password
+  host: localhost
+  port: 3306
+
+production:
+  adapter: mysql2
+  encoding: utf8
+  reconnect: false
+  database: ebdb
+  pool: 5
+  username: ebroot
+  password: password
+  host: aa157o3aoi9he56.c7veyzpug82x.us-west-2.rds.amazonaws.com #localhost
+  port: 3306
