--- a/config/database.yml
+++ b/config/database.yml
@@ -60,7 +60,7 @@ development:
   adapter: mysql2
   encoding: utf8
   reconnect: false
-  database: ebdb
+  database: ebdb_dev
   pool: 5
   username: root
   password: password
@@ -74,7 +74,7 @@ test:
   adapter: mysql2
   encoding: utf8
   reconnect: false
-  database: mysql_test
+  database: ebdb_test
   pool: 5
   username: root
   password: password
